# ComputeExchange

./: .gitignore  HACKATHON.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
agents/: __init__.py  learning_agent.py  negotiator.py  planner.py  provider_agent.py  workload_characterizer.py
apps/api/: Dockerfile  __init__.py  main.py  requirements.txt
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/approval/: page.tsx
apps/web/src/app/demo/: page.tsx
apps/web/src/app/execution/: page.tsx
apps/web/src/app/orchestration/: page.tsx
apps/web/src/app/submit/: page.tsx
apps/web/src/components/: ErrorBanner.tsx
apps/web/src/components/ui/: upgrade-banner.tsx
apps/web/src/hooks/: useOrchestrationWebSocket.ts  useSessionRecovery.ts
apps/web/src/lib/: api.ts  error-store.ts  provider-names.ts  store.ts
data/provider_profiles/: providers.json
data/scenarios/: demo_scenarios.json
docs/: architecture.md  demo-script.md  deployment.md
hf_space/: DEPLOY.md  Dockerfile  README.md
openenv/compute_market_env/: Dockerfile  Dockerfile.dev  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  types_export.py
openenv/compute_market_env/server/: __init__.py  app.py  environment.py  market_simulator.py  requirements.txt  reward_engine.py  scenario_generator.py  shared_models.py
scripts/: COLAB_TRAINING.md  train_colab.ipynb  train_colab.py  validate_trajectory_export.py
