[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compute-exchange"
version = "0.1.0"
description = "OpenEnv multi-agent compute marketplace - The Expedia/Airbnb/Uber of compute resources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ComputeExchange Team" }
]
keywords = [
    "openenv",
    "compute",
    "marketplace",
    "multi-agent",
    "reinforcement-learning",
    "orchestration"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
